# table-hockey

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arm.cc  arm.h  ball_detector.cc  ball_detector.h  calib.cc  calib.h  color_detector.cc  color_detector.h  cv_util.cc  cv_util.h  hockey.h  kondo_servo_driver.cc  kondo_servo_driver.h  main.cc  motion.cc  motion.h  motion_estimator.cc  motion_estimator.h  motion_test.cc  player.cc  player.h  stop_watch.h  time.cc  time.h
data/: vga.xml
